--- a/BlazorMovie/Components/UIComponents/PropertyComponents/CardProfileImageComponent.razor
+++ b/BlazorMovie/Components/UIComponents/PropertyComponents/CardProfileImageComponent.razor
@@ -1,4 +1,4 @@
-﻿@* ProfileImageComponent *@
+﻿@* CardProfileImageComponent *@
 <img class="card-img-top" alt="Profile Image" src="@ImageSource" />
 
 @code {
