PropertyComponents folder cumbersome to search. Split into 2 folders by contents' categories: movie and person

--- a/BlazorMovie/Components/Pages/MovieDetailsPage.razor
+++ b/BlazorMovie/Components/Pages/MovieDetailsPage.razor
@@ -1,7 +1,7 @@
 ﻿@* MovieDetailsPage *@
 @page "/movie/{id:int}"
 @using System.Linq;
-@using BlazorMovie.Components.UIComponents.PropertyComponents
+@using BlazorMovie.Components.UIComponents.MoviePropertyComponents
 @using BlazorMovie.Services
 @using BlazorMovie.Components.UIComponents
 @using BlazorMovie.Components.UIComponents.CreditComponents
