--- a/BlazorMovie/Components/UIComponents/CreditComponents/PersonCardComponent.razor
+++ b/BlazorMovie/Components/UIComponents/CreditComponents/PersonCardComponent.razor
@@ -1,6 +1,6 @@
 ﻿﻿@*PersonCardComponent*@
 @using BlazorMovie.Models.Credits
-@using BlazorMovie.Components.UIComponents.PropertyComponents
+@using BlazorMovie.Components.UIComponents.MoviePropertyComponents
 
  @inject NavigationManager _navManager
 
