Changed @using statement to accomodate folder structure changes.

--- a/BlazorMovie/Components/UIComponents/PersonPropertyComponents/PersonBiographyComponent.razor
+++ b/BlazorMovie/Components/UIComponents/PersonPropertyComponents/PersonBiographyComponent.razor
@@ -1,6 +1,6 @@
 ﻿@*PersonBiographyComponent*@
 @using BlazorMovie.Models.Credits
-@using BlazorMovie.Components.UIComponents.PropertyComponents   
+@using BlazorMovie.Components.UIComponents.PersonPropertyComponents   
 
 @if (!string.IsNullOrEmpty(DisplayedBiography))
 {
