--- a/BlazorMovie/Components/UIComponents/MovieListComponent.razor
+++ b/BlazorMovie/Components/UIComponents/MovieListComponent.razor
@@ -1,5 +1,5 @@
 ﻿@typeparam TMovie where TMovie : Movie
- @using BlazorMovie.Components.UIComponents
+ @using BlazorMovie.Components.UIComponents.UtilityComponents
  @using BlazorMovie.Models.Credits
 
 <PageTitle>Movie Pro Wonder - @Title</PageTitle>
