--- a/BlazorMovie/Components/UIComponents/SearchComponents/SearchBoxInputComponent.razor
+++ b/BlazorMovie/Components/UIComponents/SearchComponents/SearchBoxInputComponent.razor
@@ -1,4 +1,7 @@
 ﻿@* SearchBoxInputComponent *@
+
+@using BlazorMovie.Components.UIComponents.UtilityComponents
+
 <div class="input-group">
     <input type="text" class="form-control border border-bottom border-top"
                         placeholder="@Placeholder"
