--- a/BlazorMovie/Components/Pages/MovieDetailsPage.razor
+++ b/BlazorMovie/Components/Pages/MovieDetailsPage.razor
@@ -1,11 +1,14 @@
 ﻿@* MovieDetailsPage *@
 @page "/movie/{id:int}"
 @using System.Linq;
-@using BlazorMovie.Components.UIComponents.MoviePropertyComponents
 @using BlazorMovie.Services
-@using BlazorMovie.Components.UIComponents
+@using BlazorMovie.Components.UIComponents.UtilityComponents
+@using BlazorMovie.Components.UIComponents.MoviePropertyComponents
 @using BlazorMovie.Components.UIComponents.CreditComponents
+@using BlazorMovie.Services.Interfaces
+
 @inject TMDBClient TMDB
+@inject INavigationService _navService
 
 @*movie details*@
 @if (movieDetails is null)
@@ -85,6 +88,9 @@ else
     protected override async Task OnInitializedAsync()
     {
         movieDetails = await TMDB.GetMovieDetailsAsync(Id);
+
+        // Use the service to update the URL
+        _navService.UpdateUrlWithName("/movie", Id, movieDetails?.Title);
     }
     
 }   
