--- a/BlazorMovie/Components/UIComponents/PersonPropertyComponents/PersonBiographyComponent.razor
+++ b/BlazorMovie/Components/UIComponents/PersonPropertyComponents/PersonBiographyComponent.razor
@@ -2,8 +2,16 @@
 @using BlazorMovie.Models.Credits
 @using BlazorMovie.Components.UIComponents.PersonPropertyComponents   
 
-@if (!string.IsNullOrEmpty(DisplayedBiography))
+@if (string.IsNullOrWhiteSpace(DisplayedBiography))
 {
+    <div class="bio-section">
+        <div class="container mt-5">
+            <h2>Biography</h2>
+            <p>Biography not available.</p>
+        </div>
+    </div>
+}
+else{
     <div class="bio-section">
         <div class="container mt-5">
             <h2>Biography</h2>
@@ -17,14 +25,6 @@
                     @(ShowFullBio ? "Read Less" : "Read More")
                 </button>
             }
-        </div>
-    </div>
-}
-else{
-    <div class="bio-section">
-        <div class="container mt-5">
-            <h2>Biography</h2>
-            <p>Biography not available.</p>
         </div>
     </div>
 }
