Created a generic PaginationUtility class and registered it.

--- a/BlazorMovie/Components/_Imports.razor
+++ b/BlazorMovie/Components/_Imports.razor
@@ -13,4 +13,5 @@
 @using BlazorMovie.Components.UIComponents.SearchComponents
 @using BlazorMovie.Models
 @using BlazorMovie.Services
+@using BlazorMovie.Utilities
 
