Added folders and reorganized models and services to enhance manageability.

--- a/BlazorMovie/Components/UIComponents/SearchComponents/MainSearchComponent.razor
+++ b/BlazorMovie/Components/UIComponents/SearchComponents/MainSearchComponent.razor
@@ -1,8 +1,9 @@
 ﻿@*MainSearchComponent(Parent)*@
-@using BlazorMovie.Components.UIComponents.UtilityComponents
-@using BlazorMovie.Services.Interfaces
-@using BlazorMovie.Models
 @using System.Web
+@using BlazorMovie.Components.UIComponents.UtilityComponents
+@using BlazorMovie.Models
+@using BlazorMovie.Models.Search
+@using BlazorMovie.Services.Interfaces
 @inject ISearchMovieService searchMovieService
 @inject NavigationManager NavManager
 
