Added Movie By Actor to the search values in dropDownComponent.

--- a/BlazorMovie/Components/UIComponents/SearchComponents/DropdownComponent.razor
+++ b/BlazorMovie/Components/UIComponents/SearchComponents/DropdownComponent.razor
@@ -3,6 +3,7 @@
     <select class="form-select dropdownSelect" @onchange="OnCategoryChanged" value="@SelectedCategory">
         <option value="">Search</option>
         <option value="MovieByTitle">Movie By Title</option>
+        <option value="PersonByName">Movies By Actor</option>
         <option value="PopularMovies">Popular Movies</option>
         <option value="TopRated">Top Rated</option>
         <option value="Upcoming">Coming Soon</option>
