Corrected small error in PersonDepartmentComponent use.

--- a/BlazorMovie/Components/Pages/PersonDetailsPage.razor
+++ b/BlazorMovie/Components/Pages/PersonDetailsPage.razor
@@ -34,7 +34,7 @@ else
                 </h1>
                 <PersonAKAComponent AKA="@PersonDetails?.AKA" />
 
-                <PersonDepartmentComponent Department="@PersonDetails?.KnownForDepartment" />
+                <PersonDepartmentComponent KnownForDepartment="@PersonDetails?.KnownForDepartment" />
 
                 <PersonBirthdateComponent Birthdate="PersonDetails?.Birthdate" />
 
