--- a/BlazorMovie/Components/UIComponents/SearchComponents/SearchBoxInputComponent.razor
+++ b/BlazorMovie/Components/UIComponents/SearchComponents/SearchBoxInputComponent.razor
@@ -39,7 +39,7 @@
 
     private DropdownComponent? dropdownComponent;
 
-    #region SEARCH BY TITLE
+    #region SEARCH BY INPUT TEXT
     private async Task SearchByInputAnsync()
     {
         if (string.IsNullOrWhiteSpace(searchQuery))
