--- a/BlazorMovie/Components/UIComponents/SearchComponents/MainSearchComponent.razor
+++ b/BlazorMovie/Components/UIComponents/SearchComponents/MainSearchComponent.razor
@@ -23,6 +23,13 @@
         </div>
     </div>
 </div>
+@if (IsPersonModalOpen && (SearchPersonResults?.Results.Any() == true))
+{
+    <!-- Render the child modal  -->
+    <PersonSearchResultsComponent SearchPersonResults="SearchPersonResults"
+                                  IsOpen ="true"  
+                                  OnCloseModal="ClosePersonModal" />
+}
 
 <ErrorMessageComponent Message="@errorMessage" />
 
@@ -42,13 +49,14 @@
     public EventCallback OnClearSearch { get; set; }
     #endregion
 
+    private bool IsPersonModalOpen { get; set; } = false;
     private bool showSearchBox = false;
     private int page { get; set; } = 1;
     private string category { get; set; } = string.Empty;
 
     // individual "search by" properties:
-    private PageResponse<Movie>? searchMovieResults;
-    private PageResponse<PersonSearchResult>? searchPersonResults;
+    private PageResponse<Movie>? SearchMovieResults;
+    private PageResponse<PersonSearchResult>? SearchPersonResults;
 
     private string errorMessage { get; set; } = string.Empty;
     private SearchBoxInputComponent? searchBox;
@@ -82,8 +90,8 @@
             return;
 
         // Clear previous search results
-        searchMovieResults = null;
-        searchPersonResults = null;
+        SearchMovieResults = null;
+        SearchPersonResults = null;
         errorMessage = string.Empty;
         // Update UI to reflect clearing results
         StateHasChanged(); 
@@ -93,7 +101,7 @@
         // Now check if we got results
         if (category == "MovieByTitle")
         {
-            if (searchMovieResults?.Results == null || !searchMovieResults.Results.Any())
+            if (SearchMovieResults?.Results == null || !SearchMovieResults.Results.Any())
             {
                 errorMessage = "No results found.";
                 return;
@@ -101,7 +109,7 @@
         }
         else if (category == "PersonByName")
         {
-            if (searchPersonResults?.Results == null || !searchPersonResults.Results.Any())
+            if (SearchPersonResults?.Results == null || !SearchPersonResults.Results.Any())
             {
                 errorMessage = "No results found.";
                 return;
@@ -115,7 +123,6 @@
 
         // Navigate to the search results page
         NavManager.NavigateTo($"/search_result?SearchQuery={HttpUtility.UrlEncode(searchQuery)}&Page={page}");
-
         IsSearchActive = true;
     }
     #endregion
@@ -129,13 +136,14 @@
 
             if (category == "MovieByTitle")
             {
-                searchMovieResults = await searchService.GetMoviesAsync(page, searchQuery);
-                Console.WriteLine($"Results fetched: {searchMovieResults?.Results?.Count ?? 0}");
+                SearchMovieResults = await searchService.GetMoviesAsync(page, searchQuery);
+                Console.WriteLine($"Results fetched: {SearchMovieResults?.Results?.Count ?? 0}");
             }
             else if (category == "PersonByName")
             {
-                searchPersonResults = await searchService.GetPersonAsync(page, searchQuery);
-                Console.WriteLine($"Results fetched: {searchPersonResults?.Results?.Count ?? 0}");
+                SearchPersonResults = await searchService.GetPersonAsync(page, searchQuery);
+                Console.WriteLine($"Results fetched: {SearchPersonResults?.Results?.Count ?? 0}");
+                if (SearchPersonResults?.Results?.Any() == true) IsPersonModalOpen = true;
             }
            
             StateHasChanged();
@@ -223,6 +231,15 @@
         // Preserve the displayed search results
         Console.WriteLine("Search cleared. Input and dropdown reset, but results remain displayed.");
         StateHasChanged(); // Update UI
+    }
+    #endregion
+
+    #region CLOSE PERSON MODAL
+    private void ClosePersonModal()
+    {
+        // Called by PersonSearchResultsComponent button
+        IsPersonModalOpen = false;
+        SearchPersonResults = null;
     }
     #endregion
 
