--- a/BlazorMovie/Components/UIComponents/SearchComponents/MainSearchComponent.razor
+++ b/BlazorMovie/Components/UIComponents/SearchComponents/MainSearchComponent.razor
@@ -5,7 +5,7 @@
 @using BlazorMovie.Models.Search
 @using BlazorMovie.Services.Interfaces
 @inject ISearchService searchService
-@inject NavigationManager NavManager
+@inject NavigationManager _navManager
 
 <div class="row">
     <div class="col-12 d-flex justify-content-end">
@@ -18,7 +18,7 @@
                                         Placeholder="@Placeholder"
                                          @bind-SearchQuery="searchQuery"
                                          OnSearch="PerformSearch"
-                                         OnClearSearch="HandleClearSearch" />
+                                         OnClearSearch="HandleClearSearch"/>
             }
         </div>
     </div>
@@ -27,7 +27,8 @@
 {
     <!-- Render the child modal  -->
     <PersonSearchResultsComponent SearchPersonResults="SearchPersonResults"
-                                  IsOpen ="true"  
+                                  IsOpen ="true"
+                                  OnMoreDetailsRequested="HandleMoreDetailsRequested"
                                   OnCloseModal="ClosePersonModal" />
 }
 
@@ -47,6 +48,11 @@
 
     [Parameter]
     public EventCallback OnClearSearch { get; set; }
+
+    [Parameter]
+    public EventCallback<int> OnMoreDetailsRequested { get; set; }
+
+
     #endregion
 
     private bool IsPersonModalOpen { get; set; } = false;
@@ -98,7 +104,6 @@
 
         await FetchSearchResults();
 
-        // Now check if we got results
         if (category == "MovieByTitle")
         {
             if (SearchMovieResults?.Results == null || !SearchMovieResults.Results.Any())
@@ -122,7 +127,7 @@
         }
 
         // Navigate to the search results page
-        NavManager.NavigateTo($"/search_result?SearchQuery={HttpUtility.UrlEncode(searchQuery)}&Page={page}");
+        _navManager.NavigateTo($"/search_result?SearchQuery={HttpUtility.UrlEncode(searchQuery)}&Page={page}");
         IsSearchActive = true;
     }
     #endregion
@@ -167,10 +172,10 @@
 
         if (!showSearchBox && !string.IsNullOrWhiteSpace(selectedCategory))
         {
-            NavigateToCategory(selectedCategory); // Your existing navigation logic
+            NavigateToCategory(selectedCategory); 
         }
 
-        StateHasChanged(); // Update the UI
+        StateHasChanged(); // Update UI
     }
     #endregion
 
@@ -195,7 +200,7 @@
             _ => "/"
         };
 
-        NavManager.NavigateTo(route);
+        _navManager.NavigateTo(route);
         
     }
     #endregion
@@ -243,6 +248,14 @@
     }
     #endregion
 
+    #region MODAL CLOSE VIA "MORE DETAILS" BUTTON
+    private void HandleMoreDetailsRequested(int personId)
+    {
+        // Called by PersonCardComponent button
+        ClosePersonModal();
+        _navManager.NavigateTo($"/person/{personId}");
+    }
+    #endregion
 }
 
     
